configs/cni.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: bootstrapnet
  namespace: kube-system
  labels:
    tier: node
    app: bootstrapnet
    k8s-app: bootstrapnet
spec:
  selector:
    matchLabels:
      app: bootstrapnet
  template:
    metadata:
      labels:
        tier: node
        app: bootstrapnet
        k8s-app: bootstrapnet
    spec:
      hostNetwork: true
      tolerations:
      - operator: Exists
      serviceAccountName: bootstrapnet
      containers:
      - name: kindnet-cni
        image: docker.io/kindest/kindnetd:v20220726-ed811e41
        volumeMounts:
        - name: cni-cfg
          mountPath: /etc/cni/net.d
        - name: xtables-lock
          mountPath: /run/xtables.lock
          readOnly: false
        - name: lib-modules
          mountPath: /lib/modules
          readOnly: true
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
          limits:
            cpu: "100m"
            memory: "50Mi"
        securityContext:
          privileged: false
          capabilities:
            add: ["NET_RAW", "NET_ADMIN"]
      volumes:
      - name: cni-cfg
        hostPath:
          path: /etc/cni/net.d
      - name: xtables-lock
        hostPath:
          path: /run/xtables.lock
          type: FileOrCreate
      - name: lib-modules
        hostPath:
          path: /lib/modules
---
